--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "e5-lora-config"
 version = "0.1.0"
-description = "Add your description here"
+description = "Configures a Seeed Wio Grove E5 LoRaWAN module."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
